# GeneralInferPipline

./: .clang-format  CMakeLists.txt  Doxyfile  README.md  checkstyle.sh
common/: config.hpp  cuda.hpp  datatype.cpp  datatype.hpp  file.hpp  string.hpp
core/: blob.cpp  blob.hpp  blobmgr.hpp  context.cpp  context.hpp  core.cpp  core.hpp  factory.hpp  graph.cpp  graph.hpp
demo/: main.cpp  test_camera.yaml  test_camera_csi.yaml  test_camera_normal.yaml  test_cast.yaml  test_readimg.yaml  yolox.yaml
docs/: index.md
docs/api/: annotated.html  blob_8cpp.html  blob_8hpp.html  blob_8hpp_source.html  blobmgr_8hpp.html  blobmgr_8hpp_source.html  camera_8cpp.html  camera_8hpp.html  camera_8hpp_source.html  casimpl_8hpp.html  casimpl_8hpp_source.html  cast_8cpp.html  cast_8hpp.html  cast_8hpp_source.html  classcore_1_1Blob-members.html  classcore_1_1Blob.html  classcore_1_1BlobManager-members.html  classcore_1_1BlobManager.html  classcore_1_1Context-members.html  classcore_1_1Context.html  classcore_1_1Core-members.html  classcore_1_1Core.html  classcore_1_1Factory-members.html  classcore_1_1Factory.html  classcore_1_1Graph-members.html  classcore_1_1Graph.html  classes.html  classnode_1_1Camera-members.html  classnode_1_1Camera.html  classnode_1_1Cast-members.html  classnode_1_1Cast.html  classnode_1_1DetectionImgGen-members.html  classnode_1_1DetectionImgGen.html  classnode_1_1FakeData-members.html  classnode_1_1FakeData.html  classnode_1_1INode-members.html  classnode_1_1INode.html  classnode_1_1ImageOpenCV-members.html  classnode_1_1ImageOpenCV.html  classnode_1_1InferrerTRT-members.html  (+123 more)
docs/api/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  classes_b.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_5.js  defines_6.js  defines_7.js  enums_0.js  enums_1.js  enums_2.js  (+41 more)
node/: inode.hpp  inode_helper.hpp
node/basic/cast/: casimpl.hpp  cast.cpp  cast.hpp
node/basic/cv/resize/: opencv.cpp  opencv.hpp
node/basic/inferrer/: tensorrt.cpp  tensorrt.hpp
node/basic/input/camera/: camera.cpp  camera.hpp
node/basic/input/fake/: fakedata.cpp  (+1 more)
node/specific/det/: detection.cpp  detection.hpp  yolox80.hpp
node/specific/yolo/: post.cpp  post.hpp
node/template/: template.cpp  template.hpp
(+8 files in other folders)
